Added third person and AI

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -120,6 +120,14 @@ AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+SigningCertificate=iPhone Developer: Michael Faulkner (578FXLEL8V)
+MobileProvision=VRtest22_Dev-3.mobileprovision
+bAutomaticSigning=False
+IOSTeamID=KBT4N88D64
+bEnableAdvertisingIdentifier=False
+bSupportsIPhone=False
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
