--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Content/InfinityBladeFireLands/
 Content/InfinityBladeGrassLands/
 Content/KiteDemo/
 Content/WaterMaterials/
+Content/Mannequin/
+Content/Geometry/
+Content/ThirdPersonBP/
+Content/ThirdPerson/
