--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ Content/Mannequin/
 Content/Geometry/
 Content/ThirdPersonBP/
 Content/ThirdPerson/
+Content/AdvancedVillagePack/
+Content/AnimStarterPack/
+Content/PhotoR_Backgrounds/
