--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -42,7 +42,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
 +ActionMappings=(ActionName="Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Trigger)
 +ActionMappings=(ActionName="HUD",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
 +ActionMappings=(ActionName="HUD",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_FaceButton1)
@@ -52,6 +52,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="TurnLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="TurnRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="TurnRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Thumbstick_Right)
++ActionMappings=(ActionName="Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightControl)
++ActionMappings=(ActionName="Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=MotionController_Right_Thumbstick_Y)
@@ -75,8 +77,13 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="MotionRight",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="MotionForward",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="MotionForward",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="MotionRight",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="MotionRight",Scale=1.000000,Key=Right)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
+
 
