playing with fire

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Content/ThirdPerson/
 Content/AdvancedVillagePack/
 Content/AnimStarterPack/
 Content/PhotoR_Backgrounds/
+Content/InfinityBladeIceLands/
