saved ice world - fingers crossed

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Content/AdvancedVillagePack/
 Content/AnimStarterPack/
 Content/PhotoR_Backgrounds/
 Content/InfinityBladeIceLands/
+Content/Maps/IceWorld_BuiltData.uasset
