first cut - IOS and mouse control

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -35,11 +35,11 @@ bEnableFOVScaling=True
 bCaptureMouseOnLaunch=True
 bDefaultViewportMouseLock=False
 bAlwaysShowTouchInterface=False
-bShowConsoleOnFourFingerTap=True
+bShowConsoleOnFourFingerTap=False
 bEnableGestureRecognizer=False
 bUseAutocorrect=False
 DefaultViewportMouseCaptureMode=CapturePermanently
-DefaultViewportMouseLockMode=DoNotLock
+DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
@@ -58,6 +58,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Block",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftCommand)
 +ActionMappings=(ActionName="Block",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="IOS Look Begin",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch1)
++ActionMappings=(ActionName="IOS Block Begin",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch2)
++ActionMappings=(ActionName="IOS Block Begin",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch3)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=MotionController_Right_Thumbstick_Y)
 +AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=S)
@@ -74,9 +77,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="MotionRight",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="MotionRight",Scale=1.000000,Key=Right)
-DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
++AxisMappings=(AxisName="IOS Look",Scale=1.000000,Key=Touch1)
++AxisMappings=(AxisName="IOS Sword",Scale=1.000000,Key=Touch2)
+DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
 ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
-
 
