--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -59,8 +59,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Block",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftCommand)
 +ActionMappings=(ActionName="Block",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="IOS Look Begin",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch1)
-+ActionMappings=(ActionName="IOS Block Begin",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch2)
-+ActionMappings=(ActionName="IOS Block Begin",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch3)
++ActionMappings=(ActionName="IOS Look Begin",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch2)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=MotionController_Right_Thumbstick_Y)
 +AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=S)
@@ -78,9 +77,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MotionRight",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="MotionRight",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="IOS Look",Scale=1.000000,Key=Touch1)
-+AxisMappings=(AxisName="IOS Sword",Scale=1.000000,Key=Touch2)
-DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
++AxisMappings=(AxisName="IOS Look",Scale=1.000000,Key=Touch2)
+DefaultTouchInterface=/Game/AlteredAssets/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
 ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
+
 
