back to mac - found VR gamepad

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -42,10 +42,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
-+ActionMappings=(ActionName="Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Trigger)
 +ActionMappings=(ActionName="HUD",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
-+ActionMappings=(ActionName="HUD",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_FaceButton1)
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="ResetVR",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="TurnLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Thumbstick_Left)
@@ -60,6 +57,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Block",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="IOS Look Begin",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch1)
 +ActionMappings=(ActionName="IOS Look Begin",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch2)
++ActionMappings=(ActionName="VR Draw Sword",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Trigger)
++ActionMappings=(ActionName="VR Block",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_FaceButton1)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=MotionController_Right_Thumbstick_Y)
 +AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=S)
