--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -60,6 +60,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="VR Draw Sword",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Trigger)
 +ActionMappings=(ActionName="VR Block",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_FaceButton1)
 +ActionMappings=(ActionName="Gamepad Rotate",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftThumbstick)
++ActionMappings=(ActionName="Gamepad Rotate",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=MotionController_Right_Thumbstick_Y)
 +AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=S)
