--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Content/AnimStarterPack/
 Content/PhotoR_Backgrounds/
 Content/InfinityBladeIceLands/
 Content/Maps/IceWorld_BuiltData.uasset
+Content/GenericNPCAnimPack/
