--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -60,6 +60,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="VR Combat",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Trigger)
 +ActionMappings=(ActionName="Gamepad Rotate",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftThumbstick)
 +ActionMappings=(ActionName="Gamepad Rotate",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
++ActionMappings=(ActionName="IOS Look Begin",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch3)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=MotionController_Right_Thumbstick_Y)
 +AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=S)
@@ -78,6 +79,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MotionRight",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="IOS Look",Scale=1.000000,Key=Touch1)
 +AxisMappings=(AxisName="IOS Look",Scale=1.000000,Key=Touch2)
++AxisMappings=(AxisName="IOS Look",Scale=1.000000,Key=Touch3)
 DefaultTouchInterface=/Game/AlteredAssets/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
 ConsoleKey=None
 -ConsoleKeys=Tilde
