--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Content/PhotoR_Backgrounds/
 Content/InfinityBladeIceLands/
 Content/Maps/IceWorld_BuiltData.uasset
 Content/GenericNPCAnimPack/
+Content/Explosions/
