--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,16 +92,16 @@ r.SupportMaterialLayers=False
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/NewMap.NewMap
 LocalMapOptions=
-TransitionMap=None
+TransitionMap=/Game/Maps/TravelMap.TravelMap
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/GameInstanceBP.GameInstanceBP_C
 GameDefaultMap=/Game/Maps/NewMap.NewMap
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/NewGameModeBP.NewGameModeBP_C
+ServerDefaultMap=/Game/Maps/NewMap.NewMap
+GlobalDefaultGameMode=/Game/Blueprints/GameModeBP.GameModeBP_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
@@ -185,5 +185,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
