ready for multiplayer test

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -90,7 +90,7 @@ r.SupportReversedIndexBuffers=True
 r.SupportMaterialLayers=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/NewMap.NewMap
+EditorStartupMap=/Game/Maps/Lobby.Lobby
 LocalMapOptions=
 TransitionMap=/Game/Maps/TravelMap.TravelMap
 bUseSplitscreen=False
@@ -99,8 +99,8 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/GameInstanceBP.GameInstanceBP_C
-GameDefaultMap=/Game/Maps/NewMap.NewMap
-ServerDefaultMap=/Game/Maps/NewMap.NewMap
+GameDefaultMap=/Game/Maps/Lobby.Lobby
+ServerDefaultMap=/Game/Maps/Lobby.Lobby
 GlobalDefaultGameMode=/Game/Blueprints/GameModeBP.GameModeBP_C
 GlobalDefaultServerGameMode=None
 
@@ -142,6 +142,9 @@ CategorySlot6=Six
 CategorySlot7=Seven
 CategorySlot8=Eight
 CategorySlot9=Nine
+
+[OnlineSubsystem]
+DefaultPlatformService=Null
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
