--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -32,7 +32,7 @@ bF11TogglesFullscreen=True
 bUseMouseForTouch=False
 bEnableMouseSmoothing=True
 bEnableFOVScaling=True
-bCaptureMouseOnLaunch=True
+bCaptureMouseOnLaunch=False
 bDefaultViewportMouseLock=False
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=False
@@ -62,24 +62,27 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Gamepad Rotate",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
 +ActionMappings=(ActionName="IOS Look Begin",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch3)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
-+AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=MotionController_Right_Thumbstick_Y)
-+AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="MotionForward",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="MotionRight",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="MotionRight",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="MotionRight",Scale=0.500000,Key=MotionController_Right_Thumbstick_X)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=MotionController_Right_Thumbstick_Y)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="MoveRight",Scale=0.500000,Key=MotionController_Right_Thumbstick_X)
 +AxisMappings=(AxisName="LookRight",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookRight",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=Gamepad_RightY)
-+AxisMappings=(AxisName="MotionRight",Scale=1.000000,Key=Gamepad_LeftX)
-+AxisMappings=(AxisName="MotionForward",Scale=1.000000,Key=Gamepad_LeftY)
-+AxisMappings=(AxisName="MotionForward",Scale=1.000000,Key=Up)
-+AxisMappings=(AxisName="MotionForward",Scale=-1.000000,Key=Down)
-+AxisMappings=(AxisName="MotionRight",Scale=-1.000000,Key=Left)
-+AxisMappings=(AxisName="MotionRight",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="IOS Look",Scale=1.000000,Key=Touch1)
 +AxisMappings=(AxisName="IOS Look",Scale=1.000000,Key=Touch2)
 +AxisMappings=(AxisName="IOS Look",Scale=1.000000,Key=Touch3)
++AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=None)
++AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=None)
++AxisMappings=(AxisName="Turn",Scale=1.000000,Key=None)
 DefaultTouchInterface=/Game/AlteredAssets/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
 ConsoleKey=None
 -ConsoleKeys=Tilde
