--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -144,7 +144,11 @@ CategorySlot8=Eight
 CategorySlot9=Nine
 
 [OnlineSubsystem]
-DefaultPlatformService=Null
+DefaultPlatformService=Oculus
+
+[OnlineSubsystemOculus]
+bEnabled=true
+OculusAppId=3136667196405810
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
